--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="jumbotron">
             <h1>Jumbotron</h1>
             <p>Ceci est un Jumbotron, je lui ai ajouté un effet qu'on appelle parallax</p>
-            <button id="buttonJumbotron" type="button">plus info sur W3School</button>
+            <a id="buttonJumbotron" href="https://www.w3schools.com/">Plus info sur W3School</a>
         </div>
     </div>
 
@@ -53,7 +53,7 @@
                 </p>
             </article>
         </main>
-        
+
         <aside id="rightCol">
             <p id="button-modal">Inscription</p>
             <div id="myModal" class="modal">
